# langchain_doc_helper

./: README.md  ingestion.py  main.py  pyproject.toml  test.py
backend/: api.py  config.py  doc_ingestion.py  embedding.py  llm.py  main.py  rag_chain.py  retriever.py
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/: App.jsx  App.vue
frontend/src/api/: client.js
frontend/src/components/: ChatWindow.vue  MessageBubble.vue  ModelSelector.vue
frontend/src/styles/: main.css
